[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["SebastianGamboaBlanco <sebastiangb007@gmail.com>"]
description = ""
name = "expresionesregulares"
version = "0.1.0"
[tool.poetry.dependencies]
emoji = "^0.5.4"
python = "^3.7"
[tool.poetry.dev-dependencies]
